[package]
name = "psbt_guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "=0.15.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0.115"
base64 = "0.13"
serde = { version="1.0.198", features=["derive"] }
